MC818-Fix menu getting clipped by sideTrowser

--- a/ui/reuse/client/src/components/topNav/topNav.scss
+++ b/ui/reuse/client/src/components/topNav/topNav.scss
@@ -99,6 +99,7 @@
     .dropdown-menu {
         right: 0;
         left: auto;
+        z-index: $zindex-navbar-menu;
     }
 
     .topNav .dropdown {
